--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,18 @@
 name: mapbox_gl
 description: A Flutter plugin for integrating Mapbox Maps inside a Flutter application on Android, iOS and web platfroms.
 version: 0.12.0
-homepage: https://github.com/tobrun/flutter-mapbox-gl
+homepage: https://github.com/Bucket-Map/flutter-mapbox.git
 
 dependencies:
   flutter:
     sdk: flutter
   mapbox_gl_platform_interface:
     git:
-      url: https://github.com/tobrun/flutter-mapbox-gl.git
+      url: https://github.com/Bucket-Map/flutter-mapbox.git
       path: mapbox_gl_platform_interface
   mapbox_gl_web:
     git:
-      url: https://github.com/tobrun/flutter-mapbox-gl.git
+      url: https://github.com/Bucket-Map/flutter-mapbox.git
       path: mapbox_gl_web
 
 dependency_overrides:
